--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+* {
+  color: snow;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    margin: 0;
+    padding: 0;
+}
 html {
   background-color: #14141e;
+}
+.banner {
+  height: auto;
+  width: 100vw;
 }
