--- a/css/nav.css
+++ b/css/nav.css
@@ -5,7 +5,7 @@ menu{
     height: 40px;
     background-color: rgb(214, 18, 0);
     position: sticky;
-    box-shadow: 0px 10px 10px grey;
+    box-shadow: 0px 7.5px 10px rgba(109, 109, 109, 0.582);
     
 }
 
