--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,20 @@
 html {
   background-color: #14141e;
 }
+.text{
+  margin: 0 10px;
+
+}
+button, button *{
+  background-color: #bb2b2b;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: large;
+  padding: 10px;
+}
+.resell_button {
+  margin: 0 50px;
+}
 .banner {
   height: auto;
   width: 100vw;
