met mijn stuk klaar... denk ik

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   background-repeat: repeat-x;
   background-position: 0 100%;
 }
-main{
+main {
   height: 100vh;
 }
 .text {
@@ -45,4 +45,9 @@ button * {
 }
 .info {
   width: 60%;
+}
+.background {
+  background-image: url("../media/img/content.webp");
+  background-repeat: no-repeat;
+  background-position: center;
 }
