--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 * {
   color: snow;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -18,8 +19,16 @@ body {
 main {
   height: 75vh;
 }
+.ttl{
+  margin-left: 5%;
+  margin-top: 0%;
+  text-decoration: underline;
+  font-family: 'Ubuntu', sans-serif;
+}
 .text {
-  margin: 0 10px;
+  margin-top: 50px;
+  font-family: 'Ubuntu', sans-serif;
+  margin-left: 5%;
 }
 .mid_txt {
   border: #bb2b2b solid 2px;
@@ -36,7 +45,7 @@ button * {
   padding: 10px;
 }
 .resell_button {
-  margin: 0 50px;
+  margin-left: 5%;
 }
 .banner {
   height: auto;
